--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,13 +75,16 @@
   font-size: 18px;
   text-align: center;
   margin: 0;
+  color:#3a5a40;
 }
 
 .cta-button{
   margin-top: 10px;
   font-size: 18px;
   font-family: "Open sans", sans-serif;
-  font-weight: 800;
+  font-weight: 600;
+  color: #a3b18a;
+  text-decoration: underline;
   cursor: pointer;
 }
 
@@ -128,8 +131,8 @@
 .input {
   width: 352px;
   height: 40px;
-  border : 1px solid #3a5a40;
-  border-radius: 6px;
+  border : 1.5px solid #3a5a40;
+  border-radius: 4px;
   color: #000000;
   padding: 0 4px;
 }
@@ -137,7 +140,7 @@
 .input:focus {
   outline: none;
   border : 2px solid #3a5a40;
-  border-radius: 6px;
+  border-radius: 4px;
 }
 
 
@@ -151,7 +154,7 @@
 .input-container{
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 12px;
 }
 
 .button-container{
@@ -210,8 +213,102 @@ padding-inline-start: 40px;
   height: 100vh;
 }
 
+.templates-heading{
+  margin-top: 64px;
+  text-align: center;
+  margin-bottom: 8px;
+  font-size: 32px;
+  font-weight: 600;
+}
+
+.templates-sub-title {
+  text-align: center;
+  margin-top: 8px;
+  font-size: 20px;
+}
+
+.doc-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 64px;
+  margin : 56px;
+  justify-content: center;
+
+}
+
+.doc-card {
+  width : 20%;
+  padding : 20px;
+  border-radius: 2%;
+  box-shadow: 24px 12px 36px 12px rgba(161,161,161,0.49);
+}
+
+.doc-card > .image {
+  width: 100%;
+}
+
+.doc-card > .title {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.doc-card > .sub-title {
+  font-size : 16px;
+  font-weight : 400
+}
 
 
+.document-container {
+  justify-content: space-between;
+ display: flex;
+ flex-direction: row;
+ padding : 4% 10%
+}
+
+.choices-container {
+  width: 40%;
+}
+
+.choices-container > .heading {
+  font-size: 24px;
+  font-weight: 600;
+  text-align: left;
+  padding: 0;
+  margin: 40px 0 24px 0;
+}
+
+.choices-container > .question {
+  margin-top: 24px;
+  margin-bottom: 8px;
+} 
+
+.choices-container > input {
+  outline: none;
+  width: 50%;
+  height: 18px;
+  margin-bottom: 16px;
+  border: 0;
+  border-bottom: 1px black solid;
+  margin-left: 16px;
+}
 
 
+.choices-container .download-pdf {
+  padding : 8px;
+  background-color: #3a5a40;
+  color: white;
+  border: 0px;
+  font-size: 16px;
+  border-radius: 4px;
+}
 
+.choices-container > input :focus{
+  border-bottom: 2px black solid;
+}
+
+.document-preview-container {
+  width : 50%;
+  background-color: #ffffff;
+  box-shadow: 24px 12px 36px 12px rgba(161,161,161,0.49);
+}
